show logo on mobile - fixes #54

--- a/src/stylesheets/components/_header.sass
+++ b/src/stylesheets/components/_header.sass
@@ -94,6 +94,7 @@
   &__logo
     +clamp('width', 8.125em, 9.7em, $largeMobile, $desktop)
     flex: 0 0 auto
+    position: relative
     z-index: 10
 
   &__nav
